--- a/css/style.css
+++ b/css/style.css
@@ -199,10 +199,10 @@ main .primeiro-conteudo .container-txt-botao > p {
 
 /*PARTE DO BOTÃO */
 main .primeiro-conteudo .container-txt-botao > a {
-    padding: 15px;
+    padding: 12px;
     background-color: white;
     color: black;
-    border-radius: 30px;
+    border-radius: 50px;
     font-weight: 600;
     text-decoration: none;
     font-family: var(--botão-fonte);
@@ -227,4 +227,24 @@ main .primeiro-conteudo .img {
 /*IMAGEM*/
 main .primeiro-conteudo .img > img {
     height: 550px;
+}
+
+/*PARTE SOBRE A EMPRESA*/
+main .sobre {
+    height: 100vh;
+    background-image: url(../img/foto-consultoria.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+   /* background-attachment: fixed; */
+}
+
+main .sobre #container-txt {
+    max-width: 500px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #3F0073;
+    margin: auto;
 }
