--- a/css/style.css
+++ b/css/style.css
@@ -328,3 +328,5 @@ main .servicos .container .container-servicos > a:hover {
     background-color: #9335e1;
     color: rgb(255, 255, 255);
 }
+
+/*DEPOIMENTOS*/
