--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,11 @@ main .container-depoimentos > article h1 {
 }
 
 /*PARTE DOS CARDS DO DEPOIMENTO*/
-main .container-depoimentos > article .depoimentos {
-    
+main .container-depoimentos > article > .depoimentos {
+    border-radius: 10px;
+    padding: 20px;
+    background-color: var(--degradê1);
+    margin: 20px;
+    text-align: center;
 }
+
