--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,8 @@ main .servicos .container .container-servicos > a:hover {
 /*DEPOIMENTOS*/
 main .container-depoimentos {
     background-color: #D9D9D9;
+    padding: 10px;
+    height: auto;
 }
 
 /*DEPOIMENTOS H1*/
@@ -345,10 +347,10 @@ main .container-depoimentos > h1 {
 /*DEPOIMENTOS ARTICLE*/
 main .container-depoimentos > article {
     display: flex;
-    height: 100vh;
+    height: auto;
     align-items: center;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 0px 90px;
 }
 
 
