--- a/contato/css/style.css
+++ b/contato/css/style.css
@@ -35,13 +35,27 @@
     --botão-fonte: "Noto Sans Syriac Western", sans-serif;
 }
 
+/*BODY*/
+body {
+    background-color: #f0f0f0;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+}
+
+header img {
+    width: 100px;
+    height: 100px;
+}
+
 /*DIV CONTAINER*/
 .container {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f0f0f0;
 }
 
 .text {
@@ -84,3 +98,5 @@ form {
     border-radius: 5px;
     border: 1px solid black;
 }
+
+/*BOTAO*/
